--- a/src/components/ui/select/select.module.scss
+++ b/src/components/ui/select/select.module.scss
@@ -1,51 +1,41 @@
-/* reset */
+
 button {
   all: unset;
 }
 
 .SelectTrigger {
+  cursor: pointer;
+
   display: flex;
-  gap: 5px;
   align-items: center;
   justify-content: space-between;
 
   width: 210px;
+  height: 36px;
   margin-bottom: 20px;
-  padding: 6px 12px;
+  padding: 6px 12px 5px;
+
 
   font-size: 13px;
   line-height: 1;
-  color: white; /* было --violet-11 */
-
-  border: 1px solid var(--color-dark-300);
-  border-radius: 2px;
-}
-
-
-.SelectTrigger[data-placeholder] {
-  color: white; /* было --violet-9 */
-}
-
-.SelectIcon {
-  color: #8a2be2; /* было --violet-11 */
-}
-
-.SelectContent {
-  border-radius: 6px;
-  box-shadow: 0 10px 38px -10px rgb(22 23 24 / 35%),
-  0 10px 20px -15px rgb(22 23 24 / 20%);
-}
-
-.SelectViewport {
-  width: 100%;
-  margin-top: 36px;
-
-  /* padding: 6px 12px; */
-
-  color: white;
+  color: white; 
 
   border: 1px solid var(--color-dark-300);
   border-radius: 1px;
+
+  &:hover{
+    background-color: var(--color-dark-500);
+    border: 1px solid var(--color-dark-100);
+  }
+
+  &:focus{
+    border: 2px solid var(--color-info-700);
+  }
+
+  &:disabled{
+    color:var(--color-dark-300);
+    border: 1px solid var(--color-dark-300);
+  }
 
 }
 
@@ -64,7 +54,7 @@ button {
   font-size: var(--font-size-m);
   font-weight: var(--font-weight-regular);
   line-height: var(--line-height-m);
-  color: white; /* было --violet-11 */
+  color: white;
 
   outline: none;
 
@@ -72,52 +62,46 @@ button {
     color: var(--color-primary-300);
     background-color: var(--color-primary-900);
   }
-}
 
 
-
-.SelectItem[data-disabled] {
-  pointer-events: none;
-  color: #999; /* было --mauve-8 */
 }
 
 .SelectItem[data-highlighted] {
   color: var(--color-primary-300);
   background-color: var(--color-primary-900);
-}
-
-.SelectLabel {
-  padding: 0 25px;
-  font-size: 12px;
-  line-height: 25px;
-  color: #4b0082; /* было --mauve-11 */
+  outline: none;
 }
 
 
+.SelectItem[data-disabled] {
+  pointer-events: none;
+  color: #999;
+}
 
-.SelectItemIndicator {
-  position: absolute;
-  left: 0;
+.SelectViewport {
+  overflow: auto;
 
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
+  color: white;
 
-  width: 25px;
-
+  border: 1px solid var(--color-dark-300);
+  border-top-left-radius: 1px;
+  border-bottom-left-radius: 1px;
 
 }
 
-.SelectScrollButton {
-  cursor: default;
+.SelectContent {
+  width: var(--radix-select-trigger-width);
+  max-height: var(--radix-select-content-available-height);
+}
 
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.label{
+  font-size: var(--font-size-s);
+  font-weight: var(--font-weight-regular);
+  line-height: var(--line-height-m);
+  color: var(--color-dark-100);
 
-  height: 25px;
+}
 
-  color: #8a2be2; /* было --violet-11 */
-
-  background-color: black;
+.labelDisabled{
+  color: var(--color-dark-300);
 }
